lib/GSL/Special/exp.h

int gsl_sf_exp_e(double x,double* result);
double gsl_sf_exp(double x);
int gsl_sf_exp_e10_e(double x,double* result);
int gsl_sf_exp_mult_e(double x,double y,double* result);
double gsl_sf_exp_mult(double x,double y);
int gsl_sf_exp_mult_e10_e(double x,double y,double* result);
int gsl_sf_expm1_e(double x,double* result);
double gsl_sf_expm1(double x);
int gsl_sf_exprel_e(double x,double* result);
double gsl_sf_exprel(double x);
int gsl_sf_exprel_2_e(double x,double* result);
double gsl_sf_exprel_2(double x);
int gsl_sf_exprel_n_e(int n,double x,double* result);
double gsl_sf_exprel_n(int n,double x);
int gsl_sf_exp_err_e(double x,double dx,double* result);
int gsl_sf_exp_err_e10_e(double x,double dx,double* result);
int gsl_sf_exp_mult_err_e(double x,double dx,double y,double dy,double* result);
int gsl_sf_exp_mult_err_e10_e(double x,double dx,double y,double dy,double* result);